@@ -5,6 +5,8 @@ import com.ph.payload.response.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
+import java.util.stream.Collectors;
+
 @Component
 @RequiredArgsConstructor
 public class TourRequestsMapper {
@@ -21,7 +23,7 @@ public class TourRequestsMapper {
                 .advert(advertMapper.toAdvertResponseForTourRequest(tourRequest.getAdvert()))
                 .ownerUser(userMapper.toUserResponse(tourRequest.getOwnerUser()))
                 .status(tourRequest.getStatus())
-                .images(tourRequest.getAdvert().getImages().stream().map(imageMapper::toImageResponse).toList())
+                .images(tourRequest.getAdvert().getImages().stream().map(imageMapper::toImageResponse).collect(Collectors.toList()))
                 .tourTime(tourRequest.getTourTime())
                 .build();
     }
@@ -47,4 +49,19 @@ public class TourRequestsMapper {
                 .build();
     }
 
-}
+
+    public TourRequestResponseSimple toResponseSimple(TourRequest tourRequest) {
+        return TourRequestResponseSimple.builder()
+                .id(tourRequest.getId())
+                .tourDate(tourRequest.getTourDate())
+                .tourTime(tourRequest.getTourTime())
+                .guestUserFullName( getFullName(tourRequest))
+                .status(tourRequest.getStatus())
+                .build();
+    }
+
+
+    private String getFullName(TourRequest tourRequest) {
+        return tourRequest.getGuestUser().getFirstName() + " " + tourRequest.getGuestUser().getLastName();
+    }
+    }
